--- a/src/app/modulo/landing-page/components/heading/heading.component.html
+++ b/src/app/modulo/landing-page/components/heading/heading.component.html
@@ -1,1 +1,20 @@
-<p>heading works!</p>
+
+<header>
+<div class="nav">
+    <div class="texto">
+        <div class="btn">
+        <button>fale com um consultor</button>
+        </div>
+        <h1> Procura Cuidadores </h1>
+        <h1> de idosos confiavéis</h1> 
+    </div>
+    <div class="btn btn-2">
+        <button>solicite um orçamento</button>
+        <p>(11) 3855-1701</p>
+    </div>
+</div>
+<div class="back">
+    </div>
+
+</header>
+
