feat(rodape): criação do component e estilização

--- a/src/app/modulo/landing-page/components/rodape/rodape.component.html
+++ b/src/app/modulo/landing-page/components/rodape/rodape.component.html
@@ -1,6 +1,26 @@
+<footer>
+    <div class="app">
+        <div class="zh-d-flex zh-align-itens-center zh-justify-cont-betwen">
+            <img src="../../../../../assets/imagens/logo cuidados.png" width="300" alt="logo">
+            <p class="color-white">(11) 3855 - 1701</p>
+            <p class="">Fale com nossos consultores</p>
+        </div>
+        <div>
+            <ul class="zh-d-flex zh-justify-cont-betwen zh-justify-wrap zh-mt-68 zh-pb-52">
+                <li><a href="">• Principais dúvidas </a></li>
+                <li><a href="">• Como funciona </a></li>
+                <li><a href="">• Vantagens em ter uma empresa como a Sil </a></li>
+                <li><a href="">• Porque escolher a Levens? </a></li>
+                <li><a href="">• Ecossistema de cuidados </a></li>
+                
+            </ul>
+        </div>
+        <div class="zh-d-flex zh-flex-col color-white zh-align-itens-center zh-pb-28">
+            <p class="zh-mt-20">Levens - Cuidadores de Idosos - Todos os direitos reservados. - Política de Privacidade</p>
+            <p class="zh-fw-bold zh-mt-20">Copyright © 2013-2022</p>
+        </div>
+    </div>
+    
+</footer>
 
-<div class="zh-d-flex">
-<p>rodape works!</p>
-<p>rodape works!</p>
-</div>
 
