--- a/src/app/utils/styles/color.scss
+++ b/src/app/utils/styles/color.scss
@@ -1,8 +1,8 @@
 // -> colors vars
 
 $white: #ffffff;
-$primaryColor: #01ffff;
-$PrimaryPurpleDark: #17002e;
+$primaryColor: #6dcef2;
+$SegundaryColor: #3896bc;
 $PrimaryDark: #09001b;
 $PrimaryPurple: #4b0065;
 
@@ -25,7 +25,7 @@ $Neutral: #09001b;
 
 @mixin color-white { color: $white!important; }
 @mixin color-primary { color: $primaryColor!important; }
-@mixin color-purple-dark { color: $PrimaryPurpleDark!important; }
+@mixin color-Segundary { color: $SegundaryColor!important; }
 @mixin color-black { color: $PrimaryDark!important; }
 @mixin color-purple { color: $PrimaryPurple!important; }
 @mixin SecondaryLight { color: $SecondaryLight!important; }
@@ -36,7 +36,7 @@ $Neutral: #09001b;
 
 .color-white { @include color-white; }
 .color-primary{ @include color-primary;}
-.color-SecondaryLight {@include SecondaryLight;}
+.color-Segundary {@include color-Segundary;}
 .color-primary { @include color-primary; }
 
 .color-purple-dark { @include color-white; }
