feat(rodape): inserindo botão

--- a/src/app/modulo/landing-page/components/rodape/rodape.component.html
+++ b/src/app/modulo/landing-page/components/rodape/rodape.component.html
@@ -3,7 +3,7 @@
         <div class="zh-d-flex zh-align-itens-center zh-justify-cont-betwen">
             <img src="../../../../../assets/imagens/logo cuidados.png" width="300" alt="logo">
             <p class="color-white">(11) 3855 - 1701</p>
-            <p class="">Fale com nossos consultores</p>
+            <button mat-raised-button color="primary" class="btn"> Fale com nossos consultores</button>
         </div>
         <div>
             <ul class="zh-d-flex zh-justify-cont-betwen zh-justify-wrap zh-mt-68 zh-pb-52">
@@ -17,7 +17,7 @@
         </div>
         <div class="zh-d-flex zh-flex-col color-white zh-align-itens-center zh-pb-28">
             <p class="zh-mt-20">Levens - Cuidadores de Idosos - Todos os direitos reservados. - Política de Privacidade</p>
-            <p class="zh-fw-bold zh-mt-20">Copyright © 2013-2022</p>
+            <p class="zh-fw-hard zh-mt-20">Copyright © 2013-2022</p>
         </div>
     </div>
     
