--- a/src/app/utils/styles/helper.scss
+++ b/src/app/utils/styles/helper.scss
@@ -72,6 +72,7 @@ $base-spacing: 4;
 .#{$helper-prefix}fw-bold { font-weight: 700!important;}
 .#{$helper-prefix}fw-heavy { font-weight: 800!important;}
 .#{$helper-prefix}fw-normal { font-weight: 400!important;}
+.#{$helper-prefix}fw-hard { font-weight: 500 !important;}
 .#{$helper-prefix}fw-ligth { font-weight: 300!important;}
 
 .#{$helper-prefix}fst-italic { font-weight: 700 !important;}
