--- a/src/app/modulo/landing-page/components/rodape/rodape.component.scss
+++ b/src/app/modulo/landing-page/components/rodape/rodape.component.scss
@@ -9,10 +9,18 @@ footer{
             a {
                 color: #fff;
                 text-decoration: none;
-                font-weight: 700;
+                font-weight: 500;
             }
         }
     }
-    
+    button{
+        border-radius: 20px;
+        padding: 2px 30px;
+        font-size: 15px;
+    } 
+    button:hover {
+        color: #3f51b5 !important;
+        background-color: #fff;
+    }
 }
 
