--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,5 @@
     width: 1060px;
     margin: 0 auto;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
