--- a/src/app/utils/styles/color.scss
+++ b/src/app/utils/styles/color.scss
@@ -3,7 +3,7 @@
 $white: #ffffff;
 $primaryColor: #6dcef2;
 $SegundaryColor: #3896bc;
-$PrimaryDark: #09001b;
+$PrimaryDark: #000;
 $PrimaryPurple: #4b0065;
 
 $SecondaryDark: #1f003a;
@@ -26,7 +26,7 @@ $Neutral: #09001b;
 @mixin color-white { color: $white!important; }
 @mixin color-primary { color: $primaryColor!important; }
 @mixin color-Segundary { color: $SegundaryColor!important; }
-@mixin color-black { color: $PrimaryDark!important; }
+@mixin color-PrimaryDark { color: $PrimaryDark!important; }
 @mixin color-purple { color: $PrimaryPurple!important; }
 @mixin SecondaryLight { color: $SecondaryLight!important; }
 
@@ -37,10 +37,6 @@ $Neutral: #09001b;
 .color-white { @include color-white; }
 .color-primary{ @include color-primary;}
 .color-Segundary {@include color-Segundary;}
-.color-primary { @include color-primary; }
+.color-PrimaryDark { @include color-PrimaryDark; }
 
-.color-purple-dark { @include color-white; }
 
-.color-black { @include color-white; }
-
-.color-purple { @include color-white; }
