feito alterações em painel

--- a/src/app/modulo/landing-page/components/heading/heading.component.html
+++ b/src/app/modulo/landing-page/components/heading/heading.component.html
@@ -8,12 +8,10 @@
         <h1> Procura Cuidadores </h1>
         <h1> de idosos confiavéis</h1> 
     </div>
-    <div class="btn btn-2">
+    <!-- <div class="btn btn-2">
         <button>solicite um orçamento</button>
         <p>(11) 3855-1701</p>
-    </div>
-</div>
-<div class="back">
+    </div> -->
     </div>
 
 </header>
