--- a/src/app/shared/componentes/painel-expansion/painel-expansion.component.html
+++ b/src/app/shared/componentes/painel-expansion/painel-expansion.component.html
@@ -1,6 +1,11 @@
+ <div class="question">
+    <mat-icon class=" color-white zh-mb-20">question_mark</mat-icon>
+ <h2>PRICIPAIS <span class="color-Segundary">DUVIDAS</span></h2>
+</div>
+<!-- primeiro -->
 <mat-expansion-panel class="painel zh-mb-20">
-
-    <mat-expansion-panel-header class="zh-d-flex zh-justify-self-right">
+   
+    <mat-expansion-panel-header class="zh-d-flex zh-justify-self-right"> 
         <p>Posso trocar de Cuidador?</p>
         <mat-icon>add</mat-icon>
     </mat-expansion-panel-header>
@@ -11,31 +16,68 @@
     </ng-template>
 
 </mat-expansion-panel>
-
+<!-- segundo -->
 <mat-expansion-panel class="painel zh-mb-20">
 
     <mat-expansion-panel-header>
-        Posso trocar de Cuidador?
+    Tenho vínculo de emprego com os profissionais?
     </mat-expansion-panel-header>
 
     <ng-template matExpansionPanelContent>
-        Sim, apesar de termos um índice de 95% de eficácia e assertividade na indicação dos profissionais, é possível
-        realizar a
-        troca quantas vezes forem necessárias.
+    Os profissionais agenciados podem realizar a prestação de serviço como autônomos ou tendo sua carteira assinada via CLT.
+    Consulte nossa equipe para checar qual plano se encaixa melhor na sua realidade.
     </ng-template>
 
 </mat-expansion-panel>
-
+<!-- terceiro -->
 <mat-expansion-panel class="painel zh-mb-20">
 
     <mat-expansion-panel-header>
-        Posso trocar de Cuidador?
+    Quanto tempo demora para iniciar os serviços?
     </mat-expansion-panel-header>
 
     <ng-template matExpansionPanelContent>
-        Sim, apesar de termos um índice de 95% de eficácia e assertividade na indicação dos profissionais, é possível
-        realizar a
-        troca quantas vezes forem necessárias.
+    Como temos um grande número de profissionais cadastrados, temos disponibilidade de selecionar o profissional ideal para
+    prestar o serviço de forma imediata em vários casos. Em casos mais específicos pedimos um prazo para finalizar o
+    processo de seleção. Consulte nossa equipe para mais informações.
+    </ng-template>
+
+</mat-expansion-panel>
+    <!-- quarto -->
+<mat-expansion-panel class="painel zh-mb-20">
+
+    <mat-expansion-panel-header>
+    Quais atribuições dos cuidadores?
+    </mat-expansion-panel-header>
+
+    <ng-template matExpansionPanelContent>
+    São várias as atribuições dos cuidadores, porém é importante destacar que várias delas podem ser acordadas com a família
+    no momento da contratação e que estas funções não podem ser confundidas com atribuições dos profissionais de enfermagem.
+    </ng-template>
+
+</mat-expansion-panel>
+  <!-- quinto -->
+<mat-expansion-panel class="painel zh-mb-20">
+
+    <mat-expansion-panel-header>
+    Como é realizado o pagamento?
+    </mat-expansion-panel-header>
+
+    <ng-template matExpansionPanelContent>
+    Através de boleto bancário, mensalmente, após a realização das prestações de serviço.
+    </ng-template>
+
+</mat-expansion-panel>
+      <!-- sexto -->
+<mat-expansion-panel class="painel zh-mb-20">
+
+    <mat-expansion-panel-header>
+    Qual suporte a empresa oferece?
+    </mat-expansion-panel-header>
+
+    <ng-template matExpansionPanelContent>
+    Oferecemos suporte de dos nossos consultores das 6 as 22h todos os dias para intercorrências decorrentes da falta de
+    profissionais.
     </ng-template>
 
 </mat-expansion-panel>
