--- a/src/app/shared/componentes/painel-expansion/painel-expansion.component.scss
+++ b/src/app/shared/componentes/painel-expansion/painel-expansion.component.scss
@@ -1,8 +1,22 @@
 .painel{
     min-width: 1000px;
-    border-left: 6px solid #000;
+    border-left: 6px solid #3896bc;
     padding: 14px 0px;
-       
+    color: #3896bc;;
+}
+.question{
+    width: 100%;
+ text-align: center;
+ padding: 20px; 
+ font-size: 25px;
+ border-top: 2px solid #ff6900;
+ margin-top: 40px;
+   
+}
+.color-white{
+   border-radius: 20px;
+    border:  1px solid #3896bc;
+    background-color: #3896bc;    
 }
 
 .mat-expansion-panel {
