--- a/src/app/modulo/landing-page/components/heading/heading.component.scss
+++ b/src/app/modulo/landing-page/components/heading/heading.component.scss
@@ -1,8 +1,16 @@
-.nav {
-    background-image: url(../../../../../assets/imagens/l-ancianos1-e381bdd13955bcb64a6c71d02f1f5512.jpg);
+header {
     width: 100%;
     height: 400px;
- 
+     background-image: url(../../../../../assets/imagens/l-ancianos1-e381bdd13955bcb64a6c71d02f1f5512.png);
+   
+    
+        
+    
+}
+.nav{
+    width: 100%;
+    display: flex;
+    justify-content: center;       
 }
 
 
@@ -13,12 +21,9 @@
     font-size: 23px;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
     padding-top: 50px;
     padding-right: 30px;
-    width: 100%;
-    
-    
+    width: 100%;   
 }
 .btn button{
    background-color: #4e84e9;
@@ -50,10 +55,6 @@
     font-size: 23px;
     padding-left: 20px;
 }
-.back{
-    background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
-    width: 100%;
-    height: 80px;
-}
+
 
 
