feito atualizações de ícone

--- a/src/app/modulo/landing-page/views/landing-page.component.html
+++ b/src/app/modulo/landing-page/views/landing-page.component.html
@@ -1,7 +1,15 @@
 <app-heading></app-heading>
 
 <div class="app zh-d-flex zh-align-itens-center zh-flex-col">
-
+    <div class="small-icon">
+    <mat-icon class=" feed color-Segundary zh-mt-15">feed</mat-icon>
+    <h2 class=" font ">RECEBA UM <span class="color-Segundary " >ORÇAMENTO EM ATÉ 1H.</span></h2>
+    </div>
+    <button mat-raised-button color="primary" class="btn"> Preencha o formulário</button>
+    <div class="question">
+        <mat-icon class="backgroundBlue zh-mb-20">question_mark</mat-icon>
+        <h2>PRICIPAIS <span class="color-Segundary">DUVIDAS</span></h2>
+    </div>
     <app-painel-expansion></app-painel-expansion>
 
     <h2 class="color-Segundary zh-mb-32 zh-mt-24"> <span class="color-PrimaryDark">ONDE</span> ESTAMOS:</h2>
