--- a/src/app/modulo/landing-page/views/landing-page.component.html
+++ b/src/app/modulo/landing-page/views/landing-page.component.html
@@ -1,4 +1,5 @@
 <app-heading></app-heading>
+<app-cards></app-cards>
 
 <div class="app zh-d-flex zh-align-itens-center zh-flex-col">
     <div class="small-icon">
