--- a/src/app/utils/styles/helper.scss
+++ b/src/app/utils/styles/helper.scss
@@ -281,3 +281,4 @@ $base-spacing: 4;
     max-height: 100% !important;
 }
 
+.#{$helper-prefix}bg-SecondaryDark{ background-color: $SegundaryColor!important;}
