feito inclusão de cards no componente

--- a/src/app/modulo/landing-page/components/cards/cards.component.html
+++ b/src/app/modulo/landing-page/components/cards/cards.component.html
@@ -1,4 +1,59 @@
 <div class="card-wall">
-    <div class="card  zh-bg-SecondaryDark"></div>
- 
+
+    <div class="larger">
+        <div class="card blue">
+            <h3>Passo 1</h3>
+            <mat-icon class=" icon backgroundBlue zh-mb-20">search</mat-icon>
+            <p>Cadastro e análise inicial detalhada (por telefone, online ou presencial*)</p>
+        </div>
+        <div class="card white">
+            <h3>Passo 1</h3>
+            <mat-icon class=" icon backgroundBlue zh-mb-20">visibility</mat-icon>
+            <p>Identificação das principais necessidades do Idoso e perfil do profissional/prestadores</p>
+        </div>
+        <div class="card blue">
+            <h3>Passo 1</h3>
+            <mat-icon class=" icon backgroundBlue zh-mb-20">fact_check</mat-icon>
+            <p>Envio
+            e aprovação
+            da proposta</p>
+        </div>
+        <div class="card white">
+            <h3>Passo 1</h3>
+            <mat-icon class=" icon backgroundBlue zh-mb-20">medication</mat-icon>
+            <p>Consultor (a) exclusivo para acompanhamento do processo</p>
+        </div>
+        <div class="card blue">
+            <h3>Passo 1</h3>
+            <mat-icon class=" icon backgroundBlue zh-mb-20">done</mat-icon>
+            <p>Seleção de profissionais
+            compatíveis com
+            suas exigências</p>
+        </div>
+        <div class="card white">
+            <h3>Passo 1</h3>
+            <mat-icon class=" icon backgroundBlue zh-mb-20">download</mat-icon>
+            <p>Envio
+            e armazenamento
+            de documentos</p>
+        </div>
+        <div class="card blue">
+            <h3>Passo 1</h3>
+            <mat-icon class="backgroundBlue zh-mb-20">play_arrow</mat-icon>
+            <p>Início  
+            da prestação
+            de Serviço</p>
+        </div>
+        <div class="card white">
+            <h3>Passo 1</h3>
+            <mat-icon class=" icon backgroundBlue zh-mb-20">handshake</mat-icon>
+            <p>Acompanhamento e
+            suporte</p>
+        </div>
+    </div>
+    <div class="btn">
+        <p>Quanto tempo dura este processo?</p>
+        <p>Em menos de 24h conseguimos o profissional no perfil exigido!</p>
+        <button>fale com um consultor</button>
+    </div>
 </div>
