--- a/src/app/modulo/landing-page/views/landing-page.component.scss
+++ b/src/app/modulo/landing-page/views/landing-page.component.scss
@@ -5,19 +5,16 @@
 
     .feed {
         font-size: 40px;
-    }
-    h2 {
-        text-align: center;
-        font-weight: 400;
-    }
+        margin-top: 20px;
+       
+    }       
      
  }
-
-
  .font {
      font-size: 35px;
      padding-bottom: 20px;
      font-weight: 700;
+     text-align: center;
  }
 
  button {
