completando componente cards

--- a/src/app/modulo/landing-page/components/cards/cards.component.html
+++ b/src/app/modulo/landing-page/components/cards/cards.component.html
@@ -1,5 +1,41 @@
 <div class="card-wall">
+    <div class=" nav">
+        <div class="speed-2">
+            <p>Clientes Atendidos</p>
+            <p>3.500</p>
+           
+        </div>
+        <div class="speed zh-mb-20">
+        <div class="number ">
+            <p>Índice de assertividade</p>
+            <p>95%</p>
+        </div>
+        </div>
+    </div>
+    <div class="bar zh-pt-20">
+        <h2>Cuidar pode ser Leve</h2>
+    </div>
 
+    <div class="btn">
+        <button>fale com um consultor</button>
+    </div>
+    <h2 class=" bord color-white ">CONHEÇA O NOSSO CONCEITO DE ECOSSISTEMA DE CUIDADOS</h2>
+    <div class="larger-text">
+        <h3 id="text-h3" class="text  color-SecondaryDark  zh-fw-heavy-100">UM VERDADEIRO CONCIERGE ONDE A FAMÍLIA
+            ENCONTRA TODOS OS SERVIÇOS QUE NECESSITA EM UM SÓ LUGAR</h3>
+        <p class="zh-mb-20">Profissionais de Saúde (Fisioterapeutas, Fonoaudiólogos, Nutricionistas, etc...)
+            Remoção através de Ambulâncias
+            Instituições de Longa Permanência
+            Aluguel de Equipamentos (Camas, cadeiras de rodas, andador, etc...)
+            Gerenciamento de Crônicos
+            Vídeo Monitoramento
+            Entre outros</p>
+    </div>
+    <div class="small-text">
+        <h2 class="color-white">COMO FUNCIONA?</h2>
+        <h2 class=" color-SecondaryDark ">CONFIRA O PASSO A PASSO:</h2>
+
+    </div>
     <div class="larger">
         <div class="card blue">
             <h3>Passo 1</h3>
@@ -15,8 +51,8 @@
             <h3>Passo 1</h3>
             <mat-icon class=" icon backgroundBlue zh-mb-20">fact_check</mat-icon>
             <p>Envio
-            e aprovação
-            da proposta</p>
+                e aprovação
+                da proposta</p>
         </div>
         <div class="card white">
             <h3>Passo 1</h3>
@@ -27,28 +63,28 @@
             <h3>Passo 1</h3>
             <mat-icon class=" icon backgroundBlue zh-mb-20">done</mat-icon>
             <p>Seleção de profissionais
-            compatíveis com
-            suas exigências</p>
+                compatíveis com
+                suas exigências</p>
         </div>
         <div class="card white">
             <h3>Passo 1</h3>
             <mat-icon class=" icon backgroundBlue zh-mb-20">download</mat-icon>
             <p>Envio
-            e armazenamento
-            de documentos</p>
+                e armazenamento
+                de documentos</p>
         </div>
         <div class="card blue">
             <h3>Passo 1</h3>
             <mat-icon class="backgroundBlue zh-mb-20">play_arrow</mat-icon>
-            <p>Início  
-            da prestação
-            de Serviço</p>
+            <p>Início
+                da prestação
+                de Serviço</p>
         </div>
         <div class="card white">
             <h3>Passo 1</h3>
             <mat-icon class=" icon backgroundBlue zh-mb-20">handshake</mat-icon>
             <p>Acompanhamento e
-            suporte</p>
+                suporte</p>
         </div>
     </div>
     <div class="btn">
