--- a/src/app/modulo/landing-page/components/cards/cards.component.scss
+++ b/src/app/modulo/landing-page/components/cards/cards.component.scss
@@ -1,7 +1,83 @@
 .card-wall {
     width: 100%;
     background-image: url(../../../../../assets/imagens/pexels-kampus-production-7551675.png);
+    text-align: center;
+    .nav{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+       
+    }
+    
+   
+    .number{
+        width: 950px;
+        padding: 15px;
+        border-radius: 30px;
+        background-color:#FF9400;
+        display: flex;
+        justify-content: space-between;
+        color: #fff;
+       
+    }
+    .speed-2{
+        width: 1000px;
+        background-color: #FF9400;
+        padding: 15px;
+        border-radius: 30px;
+        display: flex;
+        justify-content: space-between;
+        color: #fff;
+    }
+    
+    .speed{
+        background-color: #fff;
+        width: 1000px;
+        border-radius: 30px;
+        margin-top: 10px;
+    }
+    .bar{
+        font-size: 35px;
+         width: 1200px;
+        margin: 0 auto;
+        height: 120px;
+       background-image: linear-gradient(135deg, #4C83FF 10%, #2AFADF 100%);
+        color: #fff;
+        border-radius: 20px;
+         padding: 20px;
 
+    }
+    .bord{
+        border-top: 2px solid #fff;
+       padding-top: 20px;
+       font-size: 35px;
+        width: 1200px;
+         margin: 0 auto;
+
+    }
+    .larger-text{
+        text-align: center;
+        width: 700px;
+        margin: 0 auto;
+        line-height: 25px;
+        color: #fff;
+       
+    }
+    .text h3{
+        font-size: 20px;
+        
+    }
+
+    .small-text{
+        width: 1200px;
+        margin: 0 auto;
+        text-align: center;
+        line-height: 35px;
+       border-top: 2px solid #fff;
+       
+    }
+        
 
     .larger {
         width: 100%;
@@ -33,12 +109,15 @@
         text-align: center;
         color: #182E59;
     }
+    .card p{
+        padding-top: 20px;
+    }
    h3{
-    padding: 20px;
+   padding-top: 20px;
    }
   .icon{
     font-size: 50px; 
-    padding-right: 40px;
+    padding-right: 50px;
   
  }
 }
