--- a/src/app/utils/styles/color.scss
+++ b/src/app/utils/styles/color.scss
@@ -29,7 +29,7 @@ $Neutral: #09001b;
 @mixin color-PrimaryDark { color: $PrimaryDark!important; }
 @mixin color-purple { color: $PrimaryPurple!important; }
 @mixin SecondaryLight { color: $SecondaryLight!important; }
-
+@mixin  color-SecondaryDark {color: $SecondaryDark !important;}    
 
 // -> colors classes
 
@@ -38,5 +38,5 @@ $Neutral: #09001b;
 .color-primary{ @include color-primary;}
 .color-Segundary {@include color-Segundary;}
 .color-PrimaryDark { @include color-PrimaryDark; }
-
+.color-SecondaryDark{ @include color-SecondaryDark()}
 
