feat(app): json server

--- a/src/app/modulo/landing-page/views/landing-page.component.html
+++ b/src/app/modulo/landing-page/views/landing-page.component.html
@@ -2,7 +2,7 @@
 <app-cards></app-cards>
 
 <div class="app zh-d-flex zh-align-itens-center zh-flex-col">
-    <h2 class=" color-Segundary font ">DEPOIMENTOS:</h2>
+    <h2 class=" color-Segundary font " >DEPOIMENTOS: {{  dados[0].descricao }}  </h2>
     <app-carousel [slideInterval]="2000" [images]="images2" [autoSlide]="true" class=""></app-carousel>
     <div class="small-icon">
         <mat-icon class=" feed color-Segundary zh-mt-15">feed</mat-icon>
