ajuste de layout

--- a/src/app/modulo/landing-page/components/cards/cards.component.html
+++ b/src/app/modulo/landing-page/components/cards/cards.component.html
@@ -1,23 +1,24 @@
-<div class="card-wall">
-    <div class=" nav">
-        <div class="speed-2">
-            <p>Clientes Atendidos</p>
-            <p>3.500</p>
-           
-        </div>
-        <div class="speed zh-mb-20">
-        <div class="number ">
-            <p>Índice de assertividade</p>
-            <p>95%</p>
-        </div>
+
+<div class=" nav  zh-mt-32">
+    <div class="speed-2">
+        <p>Clientes Atendidos</p>
+        <p>3.500</p>
+
+    </div>
+    <div class="speed zh-mb-20">
+        <div class=" zh-d-flex">
+            <p class="number zh-d-flex">Índice de assertividade<span></span> <span>95%</span></p>
+            <p class="progress-bar"></p>
         </div>
     </div>
+</div>
+<div class="card-wall">
     <div class="bar zh-pt-20">
-        <h2>Cuidar pode ser Leve</h2>
+        <h2 class="color-white ">Cuidar pode ser Leve</h2>
     </div>
 
     <div class="btn">
-        <button>fale com um consultor</button>
+        <button mat-raised-button color="primary" class="btn">fale com um consultor</button>
     </div>
     <h2 class=" bord color-white ">CONHEÇA O NOSSO CONCEITO DE ECOSSISTEMA DE CUIDADOS</h2>
     <div class="larger-text">
@@ -32,64 +33,64 @@
             Entre outros</p>
     </div>
     <div class="small-text">
-        <h2 class="color-white">COMO FUNCIONA?</h2>
-        <h2 class=" color-SecondaryDark ">CONFIRA O PASSO A PASSO:</h2>
-
+        <p class="color-white zh-mt-20">COMO FUNCIONA?</p>
+        <p class=" color-SecondaryDark ">CONFIRA O PASSO A PASSO:</p>
     </div>
+
     <div class="larger">
         <div class="card blue">
             <h3>Passo 1</h3>
-            <mat-icon class=" icon backgroundBlue zh-mb-20">search</mat-icon>
+            <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">search</mat-icon>
             <p>Cadastro e análise inicial detalhada (por telefone, online ou presencial*)</p>
         </div>
         <div class="card white">
             <h3>Passo 1</h3>
-            <mat-icon class=" icon backgroundBlue zh-mb-20">visibility</mat-icon>
+            <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">visibility</mat-icon>
             <p>Identificação das principais necessidades do Idoso e perfil do profissional/prestadores</p>
         </div>
         <div class="card blue">
             <h3>Passo 1</h3>
-            <mat-icon class=" icon backgroundBlue zh-mb-20">fact_check</mat-icon>
+            <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">fact_check</mat-icon>
             <p>Envio
                 e aprovação
                 da proposta</p>
         </div>
         <div class="card white">
             <h3>Passo 1</h3>
-            <mat-icon class=" icon backgroundBlue zh-mb-20">medication</mat-icon>
+            <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">medication</mat-icon>
             <p>Consultor (a) exclusivo para acompanhamento do processo</p>
         </div>
         <div class="card blue">
             <h3>Passo 1</h3>
-            <mat-icon class=" icon backgroundBlue zh-mb-20">done</mat-icon>
+            <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">done</mat-icon>
             <p>Seleção de profissionais
                 compatíveis com
                 suas exigências</p>
         </div>
         <div class="card white">
             <h3>Passo 1</h3>
-            <mat-icon class=" icon backgroundBlue zh-mb-20">download</mat-icon>
+            <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">download</mat-icon>
             <p>Envio
                 e armazenamento
                 de documentos</p>
         </div>
         <div class="card blue">
             <h3>Passo 1</h3>
-            <mat-icon class="backgroundBlue zh-mb-20">play_arrow</mat-icon>
+            <mat-icon class="backgroundBlue zh-mt-20 zh-mb-20">play_arrow</mat-icon>
             <p>Início
                 da prestação
                 de Serviço</p>
         </div>
         <div class="card white">
             <h3>Passo 1</h3>
-            <mat-icon class=" icon backgroundBlue zh-mb-20">handshake</mat-icon>
+            <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">handshake</mat-icon>
             <p>Acompanhamento e
                 suporte</p>
         </div>
     </div>
-    <div class="btn">
+    <div class="color-white">
         <p>Quanto tempo dura este processo?</p>
         <p>Em menos de 24h conseguimos o profissional no perfil exigido!</p>
-        <button>fale com um consultor</button>
+        <button mat-raised-button color="primary" class="btn">Estou interessado</button>
     </div>
 </div>
