--- a/src/app/modulo/landing-page/views/landing-page.component.html
+++ b/src/app/modulo/landing-page/views/landing-page.component.html
@@ -2,16 +2,16 @@
 <app-cards></app-cards>
 
 <div class="app zh-d-flex zh-align-itens-center zh-flex-col">
-    <h2 class=" color-Segundary font " >DEPOIMENTOS: {{  dados[0].descricao }}  </h2>
+    <h2 class=" color-Segundary font zh-mt-20" >DEPOIMENTOS: </h2>
     <app-carousel [slideInterval]="2000" [images]="images2" [autoSlide]="true" class=""></app-carousel>
     <div class="small-icon">
         <mat-icon class=" feed color-Segundary zh-mt-15">feed</mat-icon>
-        <h2 class=" font ">RECEBA UM <span class="color-Segundary " >ORÇAMENTO EM ATÉ 1H.</span></h2>
+        <h2 class=" color-PrimaryDark">RECEBA UM <span class="color-Segundary " >ORÇAMENTO EM ATÉ 1H.</span></h2>
     </div>
     <button mat-raised-button color="primary" class="btn"> Preencha o formulário</button>
     <div class="question">
         <mat-icon class="backgroundBlue zh-mb-20">question_mark</mat-icon>
-        <h2>PRICIPAIS <span class="color-Segundary">DUVIDAS</span></h2>
+        <h2 class="font">PRICIPAIS <span class="color-Segundary">DUVIDAS</span></h2>
     </div>
     <app-painel-expansion></app-painel-expansion>
 
@@ -27,8 +27,8 @@
 </div>
 
 
-<h2 class="color-Segundary zh-mb-32">PARCEIROS:</h2>
+<h2 class="">PARCEIROS:</h2>
 <app-carousel [images]="images" [autoSlide]="true" class=""></app-carousel>
-<div class="">
+<div >
     <app-rodape></app-rodape>
 </div>
