--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,3 +18,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+h2 {
+    color: #3896bc;
+    font-size: 2em;
+    margin-bottom: 32px;
+    text-align: center;
+}
