--- a/src/app/modulo/landing-page/components/cards/cards.component.scss
+++ b/src/app/modulo/landing-page/components/cards/cards.component.scss
@@ -2,148 +2,160 @@
     width: 100%;
     background-image: url(../../../../../assets/imagens/pexels-kampus-production-7551675.png);
     text-align: center;
-    .nav{
-        width: 100%;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-       
-    }
-    
-   
-    .number{
-        width: 950px;
-        padding: 15px;
-        border-radius: 30px;
-        background-color:#FF9400;
-        display: flex;
-        justify-content: space-between;
-        color: #fff;
-       
-    }
-    .speed-2{
-        width: 1000px;
-        background-color: #FF9400;
-        padding: 15px;
-        border-radius: 30px;
-        display: flex;
-        justify-content: space-between;
-        color: #fff;
-    }
-    
-    .speed{
-        background-color: #fff;
-        width: 1000px;
-        border-radius: 30px;
-        margin-top: 10px;
-    }
-    .bar{
-        font-size: 35px;
-         width: 1200px;
-        margin: 0 auto;
-        height: 120px;
-       background-image: linear-gradient(135deg, #4C83FF 10%, #2AFADF 100%);
-        color: #fff;
-        border-radius: 20px;
-         padding: 20px;
-
-    }
-    .bord{
-        border-top: 2px solid #fff;
-       padding-top: 20px;
-       font-size: 35px;
-        width: 1200px;
-         margin: 0 auto;
-
-    }
-    .larger-text{
-        text-align: center;
-        width: 700px;
-        margin: 0 auto;
-        line-height: 25px;
-        color: #fff;
-       
-    }
-    .text h3{
-        font-size: 20px;
-        
-    }
-
-    .small-text{
-        width: 1200px;
-        margin: 0 auto;
-        text-align: center;
-        line-height: 35px;
-       border-top: 2px solid #fff;
-       
-    }
-        
-
-    .larger {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        display: inline-grid;
-        grid-template-columns: repeat(4, 210px);
-        gap: 50px;
-        
-
-    }
-
-    .card {
-        width: 250px;
-        padding: 10px;
-        background-color: #000;
-        margin: 20px;
-        border-radius: 20px;
-       
-    }
-    .blue{
-        background-color: #182E59;
-        text-align: center;
-        color: #fff;
-        
-    }
-    .white{
-        background-color: #fff;
-        text-align: center;
-        color: #182E59;
-    }
-    .card p{
-        padding-top: 20px;
-    }
-   h3{
-   padding-top: 20px;
-   }
-  .icon{
-    font-size: 50px; 
-    padding-right: 50px;
-  
- }
+    padding-top: 32px;
 }
-.btn{
+.bar{
+    font-size: 35px;
+    width: 1200px;
+    margin: 0 auto;
+    height: 120px;
+    background-image: linear-gradient(90deg, #3896bc 29%, #c2efff 100%);
+    color: #fff;
+    border-radius: 20px;
+    padding: 20px;
+    
+}
+
+.bord{
+    border-top: 2px solid #fff;
+    padding-top: 20px;
+    font-size: 35px;
+    width: 1200px;
+        margin: 0 auto;
+
+}
+.larger-text{
+    text-align: center;
+    width: 700px;
+    margin: 0 auto;
+    line-height: 25px;
+    color: #fff;
+    p{
+        margin: 0 auto;
+        text-align: center;
+        max-width: 500px;
+    }
+    
+}
+.text h3{
+    font-size: 20px;
+    
+}
+
+.small-text{
+    width: 1200px;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 32px;
+    border-top: 2px solid #fff;
+    
+}
+    
+
+.larger {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    display: inline-grid;
+    grid-template-columns: repeat(4, 210px);
+    gap: 50px;
+    row-gap: 10px;
+}
+
+.card {
+    width: 250px;
+    padding: 10px;
+    background-color: #000;
+    margin: 20px;
+    border-radius: 20px;
+    
+}
+.blue{
+    background-color: #182E59;
     text-align: center;
     color: #fff;
-     
+    
 }
-.btn p{
-    font-size: 20px;
+.white{
+    background-color: #fff;
+    text-align: center;
+    color: #182E59;
 }
-.btn button {
-    background-color: #4e84e9;
-    color: #fff;
-    padding: 13px;
-    width: 250px;
-    border-radius: 60px;
-    border: 1px solid #ccc;
-    font-size: 17px;
-    cursor: pointer;
-    margin-bottom: 20px;
-    margin-top: 20px;
+.card p{
+    padding-top: 20px;
+}
+h3{
+padding-top: 20px;
+}
+.icon{
+font-size: 50px; 
+padding-right: 50px;
+
 }
 
 
 
-.btn button:hover {
+
+
+
+.nav {
+width: 100%;
+display: flex;
+align-items: center;
+flex-direction: column;
+
+
+.number {
+    width: 950px;
+    padding: 15px;
+    border-radius: 30px;
     background-color: #FF9400;
+    display: flex;
+    justify-content: space-between;
+    color: #fff;
+    z-index: 99999;
 }
+
+.progress-bar{
+    background-color: rgb(255, 255, 255);
+    border-radius: 30px;
+    height: 48px;
+    box-shadow: 1px 1px 1px 1px rgb(197, 180, 207);
+    color: #000;
+    padding: 0px 50px;
+    margin-left: -42px;
+  
+}
+
+.speed-2 {
+    width: 1000px;
+    background-color: #FF9400;
+    padding: 15px;
+    border-radius: 30px;
+    display: flex;
+    justify-content: space-between;
+    color: #fff;
+}
+
+.speed {
+    background-color: #fff;
+    width: 1000px;
+    border-radius: 30px;
+    margin-top: 10px;
+    }    
+}
+
+ button {
+    margin-top: 32px;
+    margin-bottom: 32px;
+     border-radius: 20px;
+     padding: 2px 30px;
+     font-size: 15px;
+ }
+
+ button:hover {
+     color: #ffffff !important;
+    background-color: #FF9400;
+ }
+
+
