--- a/src/app/modulo/landing-page/views/landing-page.component.html
+++ b/src/app/modulo/landing-page/views/landing-page.component.html
@@ -1,12 +1,50 @@
 <app-heading></app-heading>
+<div class="flip-box zh-mt-20">
+    <div class=" face front">
+        <h3 class="zh-p-60 ">Orçamento em ate 1h</h3>
+    </div>
+    <div class=" face back ">
+        <h3 class="zh-p-60">Orçamento em até 1h</h3>
+    </div>
+</div>
+<h2 class="title zh-mt-32"><span class="color-PrimaryDark ">EM QUE OS </span>CUIDADORES DE IDOSOS/ENFERMEIROS
+    <br /><span class="color-PrimaryDark">PODEM AJUDAR?</span></h2>
+<div>
+    <div class="wrap">
+
+        <div class="warp-img">
+            <img src="../../../../assets/imagens/Untitled-1-3.jpg">
+        </div>
+
+        <div class="warp-list">
+            <ul>
+                <li>Higiene e Banho</li>
+                <li>Administração de Medicamentos</li>
+                <li>Fazer Companhia</li>
+                <li>Acompanhamento a exames e atividades diárias
+                    <br />
+                    (médicos, fisioterapia, fonoaudiologia, etc..)
+                </li>
+                <li>Sinais Vitais</li>
+                <li>Supervisão Alimentar</li>
+                <li>Estímulos Cognitivos</li>
+                <li>Curativos, Sondas e Procedimentos de Enfermagem</li>
+                <li>Acompanhamento Hospitalar</li>
+                <li>Entre outros</li>
+            </ul>
+        </div>
+    </div>
+</div>
 <app-cards></app-cards>
 
 <div class="app zh-d-flex zh-align-itens-center zh-flex-col">
-    <h2 class=" color-Segundary font zh-mt-20" >DEPOIMENTOS: </h2>
+
+
+    <h2 class=" color-Segundary font zh-mt-20">DEPOIMENTOS: </h2>
     <app-carousel [slideInterval]="2000" [images]="images2" [autoSlide]="true" class=""></app-carousel>
     <div class="small-icon">
         <mat-icon class=" feed color-Segundary zh-mt-15">feed</mat-icon>
-        <h2 class=" color-PrimaryDark">RECEBA UM <span class="color-Segundary " >ORÇAMENTO EM ATÉ 1H.</span></h2>
+        <h2 class=" color-PrimaryDark">RECEBA UM <span class="color-Segundary ">ORÇAMENTO EM ATÉ 1H.</span></h2>
     </div>
     <button mat-raised-button color="primary" class="btn"> Preencha o formulário</button>
     <div class="question">
@@ -29,6 +67,6 @@
 
 <h2 class="">PARCEIROS:</h2>
 <app-carousel [images]="images" [autoSlide]="true" class=""></app-carousel>
-<div >
+<div>
     <app-rodape></app-rodape>
 </div>
