--- a/src/app/modulo/landing-page/views/landing-page.component.scss
+++ b/src/app/modulo/landing-page/views/landing-page.component.scss
@@ -3,13 +3,14 @@
      text-align: center;
      border-top: 2px solid #ff6900;
 
-    .feed {
-        font-size: 40px;
-        margin-top: 20px;
-       
-    }       
-     
+     .feed {
+         font-size: 40px;
+         margin-top: 20px;
+
+     }
+
  }
+
  .font {
      padding-bottom: 20px;
      font-weight: 700;
@@ -51,6 +52,83 @@
      .bord {
          border-top: 2px solid #ff6900;
          width: 100%;
+     }
+
+
+ }
+
+ .flip-box {
+     width: 100%;
+     height: 150px;
+     display: flex;
+     justify-content: center;
+     border-radius: 20px;
+     position: relative;
+     transition: all 400ms ease;
+     transform-style: preserve-3d;
+     text-align: center;
+     font-size: 20px;
+
+
+
+     .face {
+         width: 990px;
+         height: 150px;
+         position: absolute;
+
+     }
+
+     .front {
+         transform: rotateY(180deg);
+         color: #24a8d8;
+     }
+
+     .back {
+         background-image: linear-gradient(90deg, #3896bc 29%, #24a8d8 100%);
+         backface-visibility: hidden;
+         border-radius: 23px;
+         color: #fff;
+     }
+ }
+
+ .flip-box:hover {
+     transform: rotateY(180deg);
+ }
+
+
+
+ .title {
+     letter-spacing: 2px;
+     text-align: center;
+
+ }
+
+ .wrap {
+     display: flex;
+     justify-content: center;
+
+
+     .warp-img {
+         margin-right: 2rem;
+
+         img {
+             width: 360px;
+             border-radius: 23px;
+         }
+     }
+
+     .warp-list {
+         background-image: linear-gradient(90deg, #3896bc 29%, #c2efff 100%);
+         padding: 36px 44px;
+         border-radius: 23px;
+         color: #fff;
+         font-size: 16px;
+         line-height: 1.5rem;
+         width: 580px;
+
+         ul {
+             list-style: circle;
+         }
      }
 
 
