feito troca de background header

--- a/src/app/modulo/landing-page/components/heading/heading.component.html
+++ b/src/app/modulo/landing-page/components/heading/heading.component.html
@@ -1,18 +1,27 @@
-
 <header>
-<div class="nav">
-    <div class="texto">
-        <div class="btn">
-        <button>fale com um consultor</button>
+    <div class="nav">
+        <div class="nav-bar zh-ms-40">
+            <img src="../../../../../assets/imagens/logo cuidados.png" width="220" alt="logo" class="logo">
+            <div class="phone">
+                <p class="zh-mt-44 zh-me-24 color-PrimaryDark">(11) 3855-1701</p>
+                <button mat-raised-button color="primary" class="btn">Fale com um consultor</button>
+            </div>
         </div>
-        <h1> Procura Cuidadores </h1>
-        <h1> de idosos confiavéis</h1> 
-    </div>
-    <!-- <div class="btn btn-2">
-        <button>solicite um orçamento</button>
-        <p>(11) 3855-1701</p>
-    </div> -->
-    </div>
 
+
+        <div class="texto zh-ms-40 zh-mt-80">
+            <h2> Procura Cuidadores de idosos confiavéis Treinados e Confiáveis?</h2>
+            <p><span>A Levens é a solução para famílias que estão cansadas
+            de gerenciar todo o cuidado do idoso</span> ou para quem tem uma <span>demand
+            urgente e não tem ideia de onde conseguir Cuidadores ou Profissionais
+            de Enfermagem de confiança e credibilidade.</span></p>
+            <div class="zh-ms-40">
+                <button mat-raised-button color="segundary" class="btn">Solicite um orçamento</button>
+            </div>
+        </div>
+       
+    </div>
+    <div class="arrow">
+        <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">expand_more</mat-icon>
+    </div>
 </header>
-
