--- a/src/app/modulo/landing-page/views/landing-page.component.html
+++ b/src/app/modulo/landing-page/views/landing-page.component.html
@@ -1,7 +1,8 @@
 <app-heading></app-heading>
+
 <div class="flip-box zh-mt-20">
     <div class=" face front">
-        <h3 class="zh-p-60 ">Orçamento em ate 1h</h3>
+        <h3 class="zh-p-60 ">Orçamento em até 1h</h3>
     </div>
     <div class=" face back ">
         <h3 class="zh-p-60">Orçamento em até 1h</h3>
