--- a/src/app/modulo/landing-page/components/heading/heading.component.scss
+++ b/src/app/modulo/landing-page/components/heading/heading.component.scss
@@ -1,29 +1,52 @@
 header {
     width: 100%;
-    height: 400px;
-     background-image: url(../../../../../assets/imagens/l-ancianos1-e381bdd13955bcb64a6c71d02f1f5512.png);
-   
-    
-        
+    background-image: url(../../../../../assets/imagens/FUNDO-10.jpg);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 20px 20px 0 20px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: scroll;
+    background-size: cover;
     
 }
 .nav{
-    width: 100%;
-    display: flex;
-    justify-content: center;       
+    width: 80%;
+    margin: 0 auto; 
 }
 
+.nav-bar{
+    display: flex;
+    justify-content: space-between; 
+}
+.phone{
+    display: flex;
+    justify-content: right;
+    font-size: 22px;
+    color: #050DA6;
+}
+.arrow{
+    width: 100%;
+    text-align: center;
+}
 
 .texto {
     font-family: 'Poppins', sans-serif;
-    color: #050DA6;
+    color: #bbbeff;
     font-weight: bold;
     font-size: 23px;
     display: flex;
     flex-direction: column;
-    padding-top: 50px;
-    padding-right: 30px;
-    width: 100%;   
+    width: 80%;
+    p{
+        font-size: 18px;
+        line-height: 2rem;
+        color: #000;
+        span{
+            font-weight: 700;
+        }
+    }
 }
 .btn button{
    background-color: #4e84e9;
@@ -34,7 +57,8 @@ header {
    border: 1px solid #ccc;
    font-size: 17px;
    cursor: pointer;
-   margin-bottom: 20px;   
+  
+  
 }
 .btn{
     padding-right: 30px;
@@ -55,6 +79,25 @@ header {
     font-size: 23px;
     padding-left: 20px;
 }
+
+.backgroundBlue {
+    color: #3896bc;
+    font-size: 64px;
+    font-weight: 800;
+ }
+
+button {
+    margin-top: 32px;
+    margin-bottom: 32px;
+    border-radius: 20px;
+    padding: 2px 30px;
+    font-size: 15px;
+}
+
+button:hover {
+    color: #ffffff !important;
+    background-color: #FF9400;
+ }
 
 
 
