alteração cor de botão

--- a/src/app/modulo/landing-page/components/heading/heading.component.html
+++ b/src/app/modulo/landing-page/components/heading/heading.component.html
@@ -16,12 +16,14 @@
             urgente e não tem ideia de onde conseguir Cuidadores ou Profissionais
             de Enfermagem de confiança e credibilidade.</span></p>
             <div class="zh-ms-40">
-                <button mat-raised-button color="segundary" class="btn">Solicite um orçamento</button>
+                <button mat-raised-button color="primary" class="btn">Solicite um orçamento</button>
             </div>
         </div>
        
     </div>
     <div class="arrow">
+        <a href=" ">
         <mat-icon class=" icon backgroundBlue zh-mt-20 zh-mb-20">expand_more</mat-icon>
+        </a>
     </div>
 </header>
